--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="retry">Retry</string>
     <string name="news_category">News Category</string>
     <string name="general">General</string>
+    <string name="time_icon">Time icon</string>
 </resources>
