Added logic that shows proper labels for pages like article details, favourite articles

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="news_category">News Category</string>
     <string name="general">General</string>
     <string name="time_icon">Time icon</string>
+    <string name="article_headline">From %s</string>
+    <string name="favourite_articles">Favourite Articles</string>
 </resources>
