--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="time_icon">Time icon</string>
     <string name="article_headline">From %s</string>
     <string name="favourite_articles">Favourite Articles</string>
+    <string name="no_internet_connection_available">No internet connection available!</string>
 </resources>
