--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="article_headline">From %s</string>
     <string name="favourite_articles">Favourite Articles</string>
     <string name="no_internet_connection_available">No internet connection available!</string>
+    <string name="no_favourite_articles_found">No favourite articles found.</string>
 </resources>
